[tool.poetry]
name = "geo-heatmap"
version = "0.1.3"
description = "Generate an interactive geo-heatmap from your Google location data"
authors = ["Luka Steinbach <luka.steinbach@gmx.de>", "James Jarvis <git@jamesjarvis.io>"]
license = "MIT"
repository = "https://github.com/jamesjarvis/geo-heatmap"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8.1"
folium = "^0.10.1"
progressbar2 = "^3.47.0"
argparse = "^1.4.0"
ijson = "^2.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
geo-heatmap = 'geo_heatmap.console:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
